[gd_scene load_steps=48 format=2]

[ext_resource path="res://Code/Calculator.gd" type="Script" id=1]
[ext_resource path="res://2D/anime-astera_mecha_onlajn_sword_art_online-devushki-mechi-multfilmy-muzhchiny-20654.jpg" type="Texture" id=2]
[ext_resource path="res://2D/anime-devushki-15635.jpg" type="Texture" id=3]
[ext_resource path="res://2D/anime-devushki-15862.jpg" type="Texture" id=4]
[ext_resource path="res://2D/anime-devushki-38702.jpg" type="Texture" id=5]
[ext_resource path="res://2D/anime-devushki-38710.jpg" type="Texture" id=6]
[ext_resource path="res://2D/anime-devushki-38715.jpg" type="Texture" id=7]
[ext_resource path="res://2D/anime-devushki-38721.jpg" type="Texture" id=8]
[ext_resource path="res://2D/anime-devushki-38738.jpg" type="Texture" id=9]
[ext_resource path="res://2D/anime-devushki-38813.jpg" type="Texture" id=10]
[ext_resource path="res://2D/anime-devushki-39600.jpg" type="Texture" id=11]
[ext_resource path="res://2D/anime-devushki-39723.jpg" type="Texture" id=12]
[ext_resource path="res://2D/anime-devushki-39920.jpg" type="Texture" id=13]
[ext_resource path="res://2D/anime-devushki-40252.jpg" type="Texture" id=14]
[ext_resource path="res://2D/anime-devushki-40324.jpg" type="Texture" id=15]
[ext_resource path="res://2D/anime-devushki-40384.jpg" type="Texture" id=16]
[ext_resource path="res://2D/anime-devushki-40442.jpg" type="Texture" id=17]
[ext_resource path="res://2D/anime-devushki-40446.jpg" type="Texture" id=18]
[ext_resource path="res://2D/anime-devushki-40530.jpg" type="Texture" id=19]
[ext_resource path="res://2D/anime-devushki-40702.jpg" type="Texture" id=20]
[ext_resource path="res://2D/anime-devushki-40703.jpg" type="Texture" id=21]
[ext_resource path="res://2D/anime-devushki-40826.jpg" type="Texture" id=22]
[ext_resource path="res://2D/anime-devushki-40861.jpg" type="Texture" id=23]
[ext_resource path="res://2D/anime-devushki-40891.jpg" type="Texture" id=24]
[ext_resource path="res://2D/anime-devushki-40930.jpg" type="Texture" id=25]
[ext_resource path="res://2D/anime-devushki-40951.jpg" type="Texture" id=26]
[ext_resource path="res://2D/anime-devushki-40958.jpg" type="Texture" id=27]
[ext_resource path="res://2D/anime-devushki-40968.jpg" type="Texture" id=28]
[ext_resource path="res://2D/anime-devushki-40974.jpg" type="Texture" id=29]
[ext_resource path="res://2D/anime-devushki-41013.jpg" type="Texture" id=30]
[ext_resource path="res://2D/anime-devushki-41016.jpg" type="Texture" id=31]
[ext_resource path="res://2D/anime-devushki-41025.jpg" type="Texture" id=32]
[ext_resource path="res://2D/anime-devushki-iku_acune_miku_hatsune-okaloidy-40488.jpg" type="Texture" id=33]
[ext_resource path="res://2D/anime-devushki-iku_acune_miku_hatsune-okaloidy-40495.jpg" type="Texture" id=34]
[ext_resource path="res://2D/anime-devushki-muzhchiny-40178.jpg" type="Texture" id=35]
[ext_resource path="res://2D/anime-devushki-muzyka-44081.jpg" type="Texture" id=36]
[ext_resource path="res://2D/anime-devushki-noch-40975.jpg" type="Texture" id=37]
[ext_resource path="res://2D/anime-devushki-okaloidy-39849.jpg" type="Texture" id=38]
[ext_resource path="res://2D/anime-devushki-okaloidy-40680.jpg" type="Texture" id=39]
[ext_resource path="res://2D/anime-devushki-okaloidy-41038.jpg" type="Texture" id=40]
[ext_resource path="res://2D/anime-devushki-sakura-21844.jpg" type="Texture" id=41]
[ext_resource path="res://2D/oreimo.jpg" type="Texture" id=42]
[ext_resource path="res://Scenes/Layout.tscn" type="PackedScene" id=43]
[ext_resource path="res://Scenes/Sounds.tscn" type="PackedScene" id=44]
[ext_resource path="res://Scenes/SoundOperations.tscn" type="PackedScene" id=45]
[ext_resource path="res://Themes/Buttons.tres" type="Theme" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Calculator" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="oreimo" type="AnimatedSprite" parent="."]
position = Vector2( 240.055, 400.277 )
scale = Vector2( 1.05465, 1.02812 )
frames = SubResource( 1 )
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Calculator" parent="." instance=ExtResource( 43 )]
margin_left = 30.9117
margin_top = 216.721
margin_right = 407.912
margin_bottom = 708.721

[node name="TimerTmp" type="Tween" parent="."]

[node name="TimerResult" type="Tween" parent="."]

[node name="Sounds" parent="." instance=ExtResource( 44 )]

[node name="SoundOperations" parent="." instance=ExtResource( 45 )]

[node name="Change" type="Button" parent="."]
margin_left = 438.597
margin_top = 756.903
margin_right = 468.597
margin_bottom = 786.903
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 46 )
text = "?"
[connection signal="pressed" from="Change" to="." method="_on_Change_pressed"]
